--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.10.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
+    "dayjs": "^1.8.35",
     "ejs": "^3.1.3",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
